[metadata]
name = crashrepair
author = Christopher Timperley
author_email = ctimperley@cmu.edu
description = The orchestrator component for CrashRepair

[options]
python_requires = >= 3.9
install_requires =
  attrs >= 19.3.0
  loguru >= 0.5
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[flake8]
accept-encodings = utf-8,utf-16
max-line-length = 120
import-order-style = edited
