[metadata]
name = crepairfix
author = Christopher Timperley
author_email = ctimperley@cmu.edu
description = The C/LLVM repair component for CrashRepair

[options]
python_requires = >= 3.9
install_requires =
  attrs >= 19.3.0
  loguru >= 0.5
package_dir =
  =src
packages = find:

[options.packages.find]
where = src
